src/renderer/style.less
/* ... */
.app-chrome .app-chrome-item > .window-controls {
  width: 138px;
  font-size: 13px;
  height: 100%;
  display: flex;
}

.app-chrome .app-chrome-item > .window-controls > div {
  height: 100%;
  width: 32px;
}

.app-chrome .app-chrome-item > .window-controls > div:hover {
  background: rgb(200 200 200 / 10%);
}

.app-chrome .app-chrome-item > .window-controls > div.close {
  width: 100%;
  height: 100%;
  background-image: var(--gfx-closeBtn);
  background-position: center;
  background-repeat: no-repeat;
  -webkit-app-region: no-drag;

  &:hover {
    background-color: rgb(196, 43, 28)
  }
}

.app-chrome .app-chrome-item > .window-controls > div.minmax {
  background-image: var(--gfx-maxBtn);
  background-position: center;
  background-repeat: no-repeat;
  -webkit-app-region: no-drag;
  width: 100%;
  height: 100%;
}

.app-chrome .app-chrome-item > .window-controls > div.minmax.restore {
  background-image: var(--gfx-restoreBtn);
}

.app-chrome .app-chrome-item > .window-controls > div.minimize {
  background-image: var(--gfx-minBtn);
  background-position: center;
  background-repeat: no-repeat;
  -webkit-app-region: no-drag;
  width: 100%;
  height: 100%;
}

.app-chrome .app-chrome-item.playback-controls {
  width: 80%;
  height: 90%;
  display: flex;
  max-width: 500px;
  border-left: 1px solid rgb(200 200 200 / 8%);
  border-right: 1px solid rgb(200 200 200 / 8%);
}

.app-chrome .app-chrome-item > .app-playback-controls {
  display: flex;
  justify-content: center;
  align-content: center;
  width: 100%;
}

.app-chrome .app-chrome-item > .app-playback-controls .song-name {
  font-weight: 600;
  text-align: center;
  font-size: 13px;
  height: 1.3em;
  line-height: 1.3em;
  white-space: nowrap;
  max-width: 360px;

  .song-name-normal {
    height: inherit;
  }

  &.song-artist-marquee {
    > marquee {
      //margin-bottom: -3px;
    }
  }

  .explicit-icon {
    background-image: url("./assets/explicit.svg");
    height: 9px;
    width: 36px;
    filter: contrast(0);
    background-repeat: no-repeat;
    margin-left: 3px;
  }
}

.app-chrome .app-chrome-item > .app-playback-controls .song-duration p {
  font-weight: 400;
  font-size: 10px;
  height: 1.2em;
  line-height: 1.3em;
  overflow: hidden;
  margin: 0 0 0 0.25em;
}

.app-playback-controls:hover .marquee{
  animation: unset; 
  &.song-artist{
    overflow: hidden;
  }
  .song-artist{
    overflow: hidden;
  }
  &.song-name{
    overflow: hidden;
  }
}


.marquee{
  animation: marquee 15s linear infinite; 
  &.song-artist{
    overflow: unset ;
  }
  .song-artist{
    overflow: unset ;
  }
  &.song-name{
    overflow: unset ;
  }
}


.app-chrome .app-chrome-item > .app-playback-controls .song-artist {
  font-weight: 400;
  font-size: 12px;
  text-align: center;
  /*height: 1.2em;
  line-height: 1.2em;*/

  z-index: 1;
  max-width: 360px;
  

  .song-artist-normal {
    height: inherit;
  }

  &.song-artist-marquee {
    > marquee {
      margin-bottom: -3px;
    }
  }
}

.app-chrome .app-chrome-item > .app-playback-controls .song-progress {
  @bgColor: transparent;
  //height: 16px;
  position: absolute;
  bottom: 0px;
  left: 0px;
  background: @bgColor;

  &:hover {
    > input[type=range] {
      &::-webkit-slider-thumb {
        opacity: 1;
        transform: scale(1);
        z-index: 1;
      }
    }
  }

  > input[type=range] {
    appearance: none;
    width: 100%;
    height: 4px;
    background-color: rgb(200 200 200 / 10%);
    border-radius: 2px;

    &::-webkit-slider-thumb {
      opacity: 0;
      transform: scale(0.5);
      -webkit-appearance: none;
      appearance: none;
      width: 12px;
      height: 12px;
      border-radius: 100%;
      background: var(--keyColor);
      cursor: default;
      transition: opacity .10s var(--appleEase), transform .10s var(--appleEase);
    }

    &::-moz-range-thumb {
      width: 8px;
      height: 8px;
      border-radius: 100%;
      background: var(--keyColor);
      cursor: default;
    }
  }
}

@keyframes marquee {
  from {
    transform: translateX(100%);
  }

  to {
    transform: translateX(-100%);
  }
}

.app-chrome .app-chrome-item > .app-playback-controls .artwork {
  width: 42px;
  height: 42px;
  background-image: var(--artwork);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  border-radius: 4px;
  flex: 0 0 auto;
  margin: 6px;
  box-shadow: inset 0px 0px 0px 1px rgb(200 200 200 / 25%);
  image-rendering: -webkit-optimize-contrast;
}

.app-chrome .app-chrome-item > .app-playback-controls .actions {
  width: 42px;
  height: 42px;
  border-radius: 2px;
  flex: 0 0 auto;
  margin: 6px;
  display: flex;
  justify-content: center;
  align-items: center;
  filter: contrast(0.8);

  .lcdMenu {
    height: 100%;
    width: 100%;
    padding: 0px;
    margin: 0px;
    background: transparent;
    border: 0px;
    appearance: none;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 6px;

    &:focus {
      outline: none;
    }
    &:hover {
      background: var(--hover);
    }
    &:active {
      background: var(--selected-click);
      transform: scale(0.95);
    }
    .svg-icon {
      --url: url('views/svg/more.svg')!important;
    }
  }
}

.app-chrome .app-chrome-item > .app-playback-controls .playback-info {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  position: relative;
  overflow: hidden;
}

.app-chrome .app-chrome-item > .app-playback-controls .playback-info > div {
  width: 100%;
}

.app-navigation {
  background: var(--color1);
  height: calc(100% - var(--chromeHeight));
  width: 100%;
  display: flex;
  position: relative;
}

.display--small {
  display: none !important;
}

.web-slider.display--small {
  margin: 10px;
}
/* ... */

